[metadata]
name = irxnlvl
version = 0.9.2
url = https://github.com/qcuaeh/irxnlvl
description = Chemical rection energy diagram tool
long_description = file: README.md
long_description_content_type = text/markdown
keywords = console jupyter
license = LGPLv3+
license_file = LICENSE
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
packages = find:
python_requires = >=3.3
install_requires =
   IPython
   cairosvg
