[metadata]
name = rxnplot
version = 0.9.0
url = https://github.com/qcuaeh/rxnplot
description = Chemical rection energy diagram tool
#long_description = file: README.md
#long_description_content_type = text/markdown
keywords = reaction plot jupyter
license = LGPLv3+
license_files = LICENSE
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
packages = find:
python_requires = >=3.3
install_requires =
   IPython
   cairosvg

[options.package_data]
irxnlvl =
   dat/*.frag

